--- a/app/src/main/res/layout/category_view_controller.xml
+++ b/app/src/main/res/layout/category_view_controller.xml
@@ -2,16 +2,16 @@
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:background="@color/primary"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-
-
-
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/list"
+    <ListView
+        android:id="@+id/list_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        />
+        android:layout_height="match_parent">
+
+        </ListView>
+
+
+
 </RelativeLayout>
