--- a/app/src/main/res/layout/cagory_cell.xml
+++ b/app/src/main/res/layout/cagory_cell.xml
@@ -1,31 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:ripple="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/windowBackgroundColor"
+    android:orientation="vertical">
 
-    <ImageView
+    <com.andexert.library.RippleView
+        android:id="@+id/more"
         android:layout_width="match_parent"
-        android:layout_height="240dp"
-        android:id="@+id/imageView"
-        android:layout_marginTop="6dp"
-        android:layout_marginLeft="12dp"
-        android:layout_marginRight="12dp"
-        android:scaleType="fitXY"
-        android:src="@drawable/telcel"
-        android:layout_gravity="center_horizontal" />
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:layout_toLeftOf="@+id/more2"
+        ripple:rv_centered="true">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:background="#F57C00"
-        android:gravity="center"
-        android:textColor="#fafafa"
-        android:layout_marginLeft="12dp"
-        android:layout_marginRight="12dp"
-        android:text="Category name"
-        android:id="@+id/textView"
-        android:layout_gravity="center_horizontal" />
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="match_parent"
+            android:layout_height="192dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginLeft="6dp"
+            android:layout_marginRight="6dp"
+            android:layout_marginTop="3dp"
+            android:scaleType="fitXY"
+            android:src="@drawable/category_one" />
+
+    </com.andexert.library.RippleView>
 </LinearLayout>
