--- a/app/src/main/res/layout/category_view_controller.xml
+++ b/app/src/main/res/layout/category_view_controller.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:fab="http://schemas.android.com/tools"
     android:orientation="vertical"
+    android:background="@color/windowBackgroundColor"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -9,9 +11,7 @@
         android:id="@+id/list_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-
         </ListView>
-
 
 
 </RelativeLayout>
