--- a/app/src/main/res/layout/left_view_controller.xml
+++ b/app/src/main/res/layout/left_view_controller.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent">
 
     <RelativeLayout
-        android:background="@color/primary"
+        android:background="@color/primary_material_light"
         android:layout_width="fill_parent"
         android:layout_height="192dp">
 
