--- a/app/src/main/res/layout/detail_service_view_controller.xml
+++ b/app/src/main/res/layout/detail_service_view_controller.xml
@@ -2,6 +2,7 @@
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:fab="http://schemas.android.com/tools"
+    xmlns:ripple="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:background="@color/background_material_light"
     android:layout_width="match_parent"
@@ -26,7 +27,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="90dp"
+            android:layout_marginTop="120dp"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
             android:text="$1000.00 pesos"
@@ -39,6 +40,7 @@
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true" />
 
+
     </RelativeLayout>
 
 
@@ -46,22 +48,38 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/listView"
+        android:headerDividersEnabled="true"
+        android:dividerHeight="5dp"
         android:layout_below="@+id/relativeLayout"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
     <com.melnykov.fab.FloatingActionButton
         android:id="@+id/fab"
+        android:layout_margin="12dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/ic_pay"
         fab:fab_colorNormal="@color/primary"
         fab:fab_colorPressed="@color/primary_pressed"
         fab:fab_colorRipple="@color/ripple"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
+
+    <com.melnykov.fab.FloatingActionButton
+        android:id="@+id/info"
+        android:layout_marginRight="12dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_info"
+        fab:fab_colorNormal="@color/primary"
+        fab:fab_colorPressed="@color/primary_pressed"
+        fab:fab_colorRipple="@color/ripple"
+        android:layout_marginTop="164dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginRight="22dp"
-        android:layout_marginTop="164dp" />
+        android:layout_alignParentEnd="true" />
+
 
 </RelativeLayout>
