--- a/app/src/main/res/layout/detail_service_view_controller.xml
+++ b/app/src/main/res/layout/detail_service_view_controller.xml
@@ -44,13 +44,14 @@
     </RelativeLayout>
 
 
-    <ListView
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/list_view"
+        android:scrollbars="vertical"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/listView"
-        android:headerDividersEnabled="true"
-        android:dividerHeight="5dp"
+        android:layout_height="match_parent"
         android:layout_below="@+id/relativeLayout"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
