Fixed divider by left menu

--- a/app/src/main/res/layout/detail_cell.xml
+++ b/app/src/main/res/layout/detail_cell.xml
@@ -8,6 +8,8 @@
 
     <com.andexert.library.RippleView
         android:id="@+id/more"
+        android:layout_marginTop="3dp"
+        android:layout_marginBottom="3dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         ripple:rv_color="#000000"
