--- a/app/src/main/res/layout/left_view_controller.xml
+++ b/app/src/main/res/layout/left_view_controller.xml
@@ -75,25 +75,19 @@
 
         </RelativeLayout>
 
-        <View
-            android:id="@+id/view4"
-            android:layout_width="match_parent"
-            android:layout_height="12dp"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_below="@+id/relativeLayout2"
-            android:background="@color/background_material_light" />
-
-        <ListView
-            android:id="@+id/listView2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_below="@+id/view4" />
-
-
     </com.andexert.library.RippleView>
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/list_view"
+        android:scrollbars="vertical"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/more"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true" />
 
 
 </RelativeLayout>
