--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,11 @@
 <resources>
     <color name="colorPrimary">#FF5722</color>
     <color name="colorPrimaryDark">#E64A19</color>
-    
+
+    <color name="random_1_color_primary">#03A9F4</color>
+    <color name="random_2_color_primary">#F44336</color>
+    <color name="random_3_color_primary">#FFC107</color>
+    <color name="random_4_color_primary">#3F51B5</color>
     
     <color name="textColorPrimary">#FAFAFA</color>
 
