--- a/app/src/main/res/layout/cagory_cell.xml
+++ b/app/src/main/res/layout/cagory_cell.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<android.support.v7.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:ripple="http://schemas.android.com/apk/res-auto"
     android:foreground="?android:attr/selectableItemBackground"
     android:clickable="true"
     android:layout_margin="6dp"
@@ -11,10 +11,13 @@
     android:layout_height="wrap_content"
     card_view:cardCornerRadius="1dp">
 
-    <RelativeLayout
-
+    <com.andexert.library.RippleView
+        android:id="@+id/more"
+        android:layout_marginTop="1dp"
+        android:layout_marginBottom="1dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        ripple:rv_color="@color/colorPrimary">
 
         <ImageView
             android:src="@drawable/category_four"
@@ -23,6 +26,6 @@
             android:scaleType="centerCrop"
             android:id="@+id/image"/>
 
-    </RelativeLayout>
+    </com.andexert.library.RippleView>
 
 </android.support.v7.widget.CardView>
