--- a/app/src/main/res/layout/detail_cell.xml
+++ b/app/src/main/res/layout/detail_cell.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:ripple="http://schemas.android.com/tools"
+    xmlns:ripple="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/background_material_light"
@@ -8,12 +8,11 @@
 
     <com.andexert.library.RippleView
         android:id="@+id/more"
-        android:layout_marginTop="3dp"
-        android:layout_marginBottom="3dp"
+        android:layout_marginTop="1dp"
+        android:layout_marginBottom="1dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        ripple:rv_color="#000000"
-        ripple:rv_centered="true">
+        ripple:rv_color="@color/colorPrimary">
 
 
         <RelativeLayout
